--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "godotfunkytheme",
+  "publisher": "FunkyGodotTheme",
   "displayName": "GodotFunkyTheme",
   "description": "An alternative godot theme made for VS CODE!",
   "version": "0.0.1",
@@ -17,5 +18,9 @@
         "path": "./themes/Senex-color-theme.json"
       }
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SenestroStefano/godotfunkytheme"
   }
 }
